changed and improved accounts templates as Sua Conta Login page

--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -3,11 +3,11 @@
 
 {% block content %}
   <div class="container">
-    <h1>Change Password</h1>
+    <h1>Trocar a Senha</h1>
     <form method="POST">
       {% csrf_token %}
       {% bootstrap_form form %}
-      <input type="submit" class="btn btn-default" value="LogIn">
+      <input type="submit" class="btn btn-primary" value="Confirmar">
 
     </form>
 
