--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
         <ul class="navbar-nav ml-auto d-lg-flex align-items-center">
 
           <li class="nav-item ml-auto align-middle">
-            <a class="nav-link a-navbar d-lg-flex align-items-center" href="#">
+            <a class="nav-link a-navbar d-lg-flex align-items-center" href="{% url 'accounts:sua-conta' %}">
               <img src="{% static 'HaluuraApp/imgs/AccountOptions.png' %}" class="p-1" width="35" height="35" alt="Conta">
               <span>Sua Conta</span>
             </a>
