added CDBs routines and designs

--- a/static/HaluuraApp/css/master.css
+++ b/static/HaluuraApp/css/master.css
@@ -234,6 +234,14 @@ div.help-block{
   background-color: #7c7c21 !important;
 }
 
+.CDB-RDC{
+  background-color: #1a0f1f !important;
+}
+
+.LCI-LCA{
+  background-color: #1a0f1f !important;
+}
+
 .delete-row{
 
 }
