fixed quantity calculation for Tesouro, fixed email template after adding CDB

--- a/templates/html_email_template.html
+++ b/templates/html_email_template.html
@@ -882,6 +882,8 @@
                                                           </table>
                                                         </div>
                                                     {% endif %}
+                                        {% endfor %}
+                                    {% endif %}
                         {% endfor %}
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><br> Fim. <br><br> Até Amanhã!</p>
 
